# test

lib/widgets/control/qtcreator-build/: CMakeCache.txt  Makefile  WalkingWidgetPlugin.cbp  cmake_install.cmake
lib/widgets/control/qtcreator-build/include/_WalkingWidgetPlugin_/WalkingWidgetPlugin/: CMakeLists.txt  WalkingWidgetPlugin.cc  WalkingWidgetPlugin.h  WalkingWidgetPluginPlugin.cc  WalkingWidgetPluginPlugin.h  vizkit_widget.rb
lib/widgets/control/qtcreator-build/include/_WalkingWidgetPlugin_/WalkingWidgetPlugin/xml/: AILAConfig.xml  CharlieConfig.xml  SherpaConfig.xml  devices.xsd
lib/widgets/control/qtcreator-build/include/_WalkingWidgetPlugin_/WalkingWidgetPlugin/xml/deviceclasses/: AILAJoint.xml  AnkleJoint.xml  BLDCJoint.xml  CascadedController.xml  DMSBoard_12.xml  FPGAJoint.xml  HeadJoint.xml  LinkDynamics.xml  NDLCom.xml  PicoBlazeArray.xml  SpineJoint.xml  mdaq2.xml
lib/widgets/control/qtcreator-build/include/_WalkingWidgetPlugin_/WalkingWidgetPlugin/xml/deviceclasses/charlie/: MotionController_Balance.xml  MotionController_General.xml  MotionController_SendToPc.xml  MotionController_WalkControl.xml  MotionController_WalkTwoLeggedControl.xml
lib/widgets/control/qtcreator-build/include/_WalkingWidgetPlugin_/WalkingWidgetPlugin/xml/deviceclasses/sherpa/: MotionController_General.xml  MotionController_MotionControl.xml  MotionController_SendToPc.xml
lib/widgets/control/qtcreator-build/src/: Makefile  WalkingWidgetPlugin.pc  cmake_install.cmake
lib/widgets/control/qtcreator-build/test/: Makefile  cmake_install.cmake
untitled/: CMakeLists.txt  main.cpp  manifest.json
